--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -14,12 +14,12 @@ code {
 
 .header{
   height: 70px;
-  background-color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 0px -10px;
 }
 
 .logo{
@@ -30,13 +30,14 @@ code {
 .menu{
   padding: 0px 20px ;
   font-weight: 550;
-  color: #4a4a4a;
+  color: #D02025;
 }
 .About{
-  width: 950px;
+  width: 1000px;
   margin: auto;
   text-align: justify;
-  font-family: Verdana, Geneva, Tahoma, sans-serif
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #fefefe;
 }
 
 .hero-section{
@@ -49,8 +50,10 @@ code {
 }
 
 .hero-p{
-  font-weight: 100;
+  font-weight: 350;
   line-height: 1.5;
+  font-family: system-ui;
+  color: #4a4a4a;
 }
 
 .team-h3{
@@ -58,20 +61,27 @@ code {
   font-size: 25px;
 }
 
+.sangam{
+  margin: -30px 75px;
+}
+
 .team-h4{
   color: #D02025;
 }
 
 .ceo{
-  height: 138px;
-  width: 138px;
+  height: 160px;
+  width: 160px;
   border-radius: 50%;
 }
 
 .team-p{
-  font-weight: 100;
-  line-height: 1.5;
+  font-weight: 350;
+  font-family: system-ui;
+  color: #4a4a4a;
+  margin-top: -12px;
 }
+
 .team{
   display: flex;
 }
